[package]
name = "pong-transaction-service"
version = "0.2.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
serde = "1.0.202"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"]}
mongodb = { version = "2.8.2", features = ["tokio-runtime"]}
lapin = "2.3.4"
